--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "persian",
+  "name": "movies-app",
+  "homepage": "https://shamouni.github.com/movies-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "redux-mock-store": "^1.5.4",
     "sass": "^1.45.2"
   }
