--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movies-app",
-  "homepage": "https://shamouni.github.com/movies-app",
+  "homepage": "https://shamouni.github.io/movies-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
